[package]
name = "buoyant"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
file_type = "0.8.11"
iced = { version = "0.14.0", features = ["advanced", "tiny-skia"] }
rayon = "1.12.0"
serde = "1.0.228"
toml = { version = "1.1.2", features = ["serde"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
